--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>I'm Soham</h1>
+        		<h1>
+				I'm <abbr title="Soham Gaggenapally">Soham</abbr>
+			</h1>
 				<p>- IGNORE - I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/sgaggen	</a></li>
+        		<li><a href="mailto:hankquinlanhub@gmail.com">-IGNORE-email</a></li>
+        		<li><a href="https://github.com/sgaggen">github.com/sgaggen	</a></li>
 			</ul>
 		</footer>
 	</body>
