--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>
-				I'm <abbr title="Soham Gaggenapally">Soham</abbr>
+				I'm <abbr h1="Soham Gaggenapally">Soham</abbr>
 			</h1>
 				<p>- IGNORE - I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
