--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">-IGNORE-email</a></li>
+        		<li><a href="mailto:TESTING@TESTING.COM">fakeemail</a></li>
         		<li><a href="https://github.com/sgaggen">github.com/sgaggen	</a></li>
 			</ul>
 		</footer>
