--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         		<h1>
 				I'm <abbr h1="Soham Gaggenapally">Soham</abbr>
 			</h1>
-				<p>- IGNORE - I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>- IGNORE - I'm a mechanical engineer. <a href="/about">Read more about my life.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
