--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<title>Soham Gaggenapally</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		
+		<style>body {background-color: #e8ecf1;}</style>
+		
 	</head>
 	<body>
 		<nav>
