--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         		<h1>
 				I'm <abbr h1="Soham Gaggenapally">Soham</abbr>
 			</h1>
-				<p>- IGNORE - I'm a mechanical engineer. <a href="/about">Read more about my life.</a></p>
+				<p>- IGNORE - I'm a mechanical engineer. <a href="/about">These are things that I've worked on.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
