--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Soham Gaggenapally</title>
 		<!-- link to main stylesheet -->
+		<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		
 		<style>body {background-color: #e8ecf1;}</style>
