--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>About me</title>
 		<!-- link to main stylesheet -->
-		<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		
 		<style>body {background-color: #e8ecf1;}</style>
