--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         		<h1>
 				I'm <abbr h1="Soham Gaggenapally">Soham</abbr>
 			</h1>
-				<p>- IGNORE - I'm a mechanical engineer. <a href="/about">These are things that I've worked on.</a></p>
+				<p>I'm a mechanical engineer. <a href="/about">These are things that I've worked on.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
