Contact info update

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:TESTING@TESTING.COM">fakeemail</a></li>
-        		<li><a href="https://github.com/sgaggen">github.com/sgaggen	</a></li>
+        		<li><a href="mailto:gaggenapally.soham@gmail.com">email</a></li>
+        		<li><a href="https://github.com/sgaggen">github.com/sgaggen</a></li>
 			</ul>
 		</footer>
 	</body>
