Modifying contact info

--- a/index.html
+++ b/index.html
@@ -200,7 +200,13 @@ body {font-size:16px;}
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px">
+	<p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p>
+	<ul>
+        	<li><a href="mailto:gaggenapally.soham@gmail.com">email</a></li>
+        	<li><a href="https://github.com/sgaggen">github.com/sgaggen</a></li>
+	</ul>
+</div>
 
 <script>
 // Script to open and close sidebar
@@ -222,13 +228,6 @@ function onClick(element) {
   captionText.innerHTML = element.alt;
 }
 </script>
-
-	<footer>
-    		<ul>
-        		<li><a href="mailto:gaggenapally.soham@gmail.com">email</a></li>
-        		<li><a href="https://github.com/sgaggen">github.com/sgaggen</a></li>
-		</ul>
-	</footer>
 	
 </body>
 </html>
