--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
+h1:hover{color: gray;}
 body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
@@ -17,7 +18,7 @@ body {font-size:16px;}
 <nav class="w3-sidebar w3-blue w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
-    <h3 class="w3-padding-64"><b>soham<br>saggenapally</b></h3>
+    <h3 class="w3-padding-64"><b>soham<br>gaggenapally</b></h3>
   </div>
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">home</a> 
@@ -43,7 +44,7 @@ body {font-size:16px;}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="me">
-    <h1 class="w3-jumbo"><b>Engineer</b></h1>
+    <h1 class="w3-jumbo"><b>soham gaggenapally</b></h1>
     <h1 class="w3-xxxlarge w3-text-red"><b>me.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
   </div>
@@ -51,13 +52,13 @@ body {font-size:16px;}
   <!-- Photo grid (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <img src="/pictures/self.jpg" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
+      <img src="/pictures/self.jpg" style="width:100%" onclick="onClick(this)" alt="NYC">
       <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
       <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
     </div>
 
     <div class="w3-half">
-      <img src="/w3images/atrium.jpg" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
+      <p>This is just some text I have no clue what's going to happen here.</p>
       <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
       <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design">
     </div>
@@ -178,11 +179,8 @@ body {font-size:16px;}
   <div class="w3-container" id="contact" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>my contact.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</p>
-	  <ul>
-		<li><a href="mailto:gaggenapally.soham@gmail.com">email</a></li>
-        	<li><a href="https://github.com/sgaggen">github.com/sgaggen</a></li>
-	  </ul>
+		<a href="mailto:gaggenapally.soham@gmail.com">email</a>
+    <a href="https://github.com/sgaggen">github.com/sgaggen</a>
   </div>
 
 <!-- End page content -->
