--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@ body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 </style>
+
+<head>
+<link rel="icon" href="/pictures/favicon.png">
+</head>
+ 
 <body>
 
 <!-- Sidebar/menu -->
