--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ h1:hover{color: gray;}
 body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
+.vertical-center {line-height: 700px;height: 700px;}
+.vertical-center p {line-height: 1.5;display: inline-block;vertical-align: middle;}
 </style>
 
 <head>
@@ -54,18 +56,20 @@ body {font-size:16px;}
     <hr style="width:50px;border:5px solid red" class="w3-round">
   </div>
   
-  <!-- Photo grid (modal) -->
+  <!-- Photo grid for introduction (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
       <img src="/pictures/self.jpg" style="width:100%" onclick="onClick(this)" alt="NYC">
-      <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
-      <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
+      <!-- <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
+      <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs"> -->
     </div>
 
     <div class="w3-half">
-      <p>This is just some text I have no clue what's going to happen here.</p>
-      <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
-      <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design">
+      <div class="vertical-center">
+        <p>Need to fill out the introduction here.</p>
+      </div>
+      <!-- <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
+      <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design"> -->
     </div>
   </div>
 
