Updated intro section

--- a/index.html
+++ b/index.html
@@ -59,17 +59,19 @@ body {font-size:16px;}
   <!-- Photo grid for introduction (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <img src="/pictures/self.jpg" style="width:100%" onclick="onClick(this)" alt="NYC">
-      <!-- <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
-      <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs"> -->
-    </div>
-
-    <div class="w3-half">
       <div class="vertical-center">
-        <p>Need to fill out the introduction here.</p>
+        <p>Hi! </br> My name is Zxcvb. </br> I'm a mechanical engineer getting my Master's in Human-Robot Interaction
+           at Tufts University. I work on robotics, mechanical design, systems engineering, and love to create things
+            in the digital, physical, and art worlds.</p>
       </div>
       <!-- <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
       <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design"> -->
+    </div>
+
+    <div class="w3-half">
+      <img src="/pictures/self.jpg" style="width:100%" onclick="onClick(this)" alt="NYC">
+      <!-- <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
+      <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs"> -->
     </div>
   </div>
 
