Contact info tweaks

--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@ body {font-size:16px;}
   <div class="w3-container" id="contact" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>my contact.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-		<a href="mailto:gaggenapally.soham@gmail.com">email</a>
-    <a href="https://github.com/sgaggen">github.com/sgaggen</a>
+		<a href="mailto:gaggenapally.soham@gmail.com">email</a>  |  
+    <a href="https://github.com/sgaggen">github.com/sgaggen</a>  |  
+    <a href="https://instagram.com/justasmalllife">@justasmalllife</a>
   </div>
 
 <!-- End page content -->
