--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {font-size:16px;}
     <a href="#me" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">me</a> 
     <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my work</a> 
     <a href="#interests" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my interests</a> 
-    <a href="#placeholder" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Placeholder 4</a> 
+    <!-- <a href="#placeholder" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Placeholder 4</a>  -->
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my contact</a>
   </div>
 </nav>
@@ -77,7 +77,7 @@ body {font-size:16px;}
 
   <!-- Modal for full size images on click-->
   <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
-    <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
+    <span class="w3-button w3-black w3-xxlarge w3-display-topright">✕</span>
     <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
       <img id="img01" class="w3-image">
       <p id="caption"></p>
@@ -141,8 +141,8 @@ body {font-size:16px;}
     </div>
   </div>
 
-  <!-- placeholder / Pricing Tables -->
-  <div class="w3-container" id="placeholder" style="margin-top:75px">
+  <!-- placeholder -->
+  <!-- <div class="w3-container" id="placeholder" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>placeholder.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
@@ -184,9 +184,9 @@ body {font-size:16px;}
         </li>
       </ul>
     </div>
-  </div>
+  </div> -->
   
-  <!-- Contact -->
+  <!-- contact -->
   <div class="w3-container" id="contact" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>my contact.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
