--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ body {font-size:16px;}
 
     <div class="w3-half">
       <div class="vertical-center">
-        <p>Hi! </br> My name is Zxcvb. </br> I'm a mechanical engineer getting my Master's in Human-Robot Interaction
-           at Tufts University. I work on robotics, mechanical design, systems engineering, and love to create things
-            in the digital, physical, and art worlds.</p>
+        <p>Hi! </br> My name is Soham. </br> I'm a mechanical engineer getting my Master's in Human-Robot
+           Interaction at Tufts University. I work on robotics, mechanical design, simulations, and love
+           to create things in the digital, physical, and art worlds.</p>
       </div>
       <!-- <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
       <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design"> -->
