Added pictures to work section

--- a/index.html
+++ b/index.html
@@ -86,8 +86,31 @@ body {font-size:16px;}
     </div>
   </div>
 
+
   <!-- work -->
-  <div class="w3-container" id="work" style="margin-top:75px">
+  <div class="w3-container" style="margin-top:80px" id="work">
+    <h1 class="w3-xxxlarge w3-text-red"><b>work.</b></h1>
+    <hr style="width:50px;border:5px solid red" class="w3-round">
+  </div>
+  
+  <!-- Photo grid for work (modal) -->
+  <div class="w3-row-padding">
+    <div class="w3-half">
+      <img src="/pictures/134final.jpg" style="width:100%" onclick="onClick(this)" alt="Brachiating robot">
+      <img src="/pictures/134hri.jpg" style="width:100%" onclick="onClick(this)" alt="Catch and throw robot">
+      <img src="/pictures/134balancing.jpg" style="width:100%" onclick="onClick(this)" alt="Self balancing robot">
+    </div>
+
+    <div class="w3-half">
+      <img src="/pictures/" style="width:100%" onclick="onClick(this)" alt="Hydraulic artificial muscle">
+      <img src="/pictures/134arm.jpg" style="width:100%" onclick="onClick(this)" alt="Robotic arm, writing configuration">
+      <img src="/pictures/134clock.jpg" style="width:100%" onclick="onClick(this)" alt="Artistic clock">
+    </div>
+  </div>
+
+
+  <!-- work -->
+  <!-- <div class="w3-container" id="work" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>my work.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
@@ -95,22 +118,22 @@ body {font-size:16px;}
     dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </p>
-  </div>
+  </div> -->
   
   <!-- interests -->
   <div class="w3-container" id="interests" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>my interests.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>The best team in the world.</p>
-    <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+    <p>My interests are [not yet done].</p>
+    <!-- <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
     dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
     incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </p>
-    <p><b>Our interests are thoughtfully chosen</b>:</p>
+    <p><b>Our interests are thoughtfully chosen</b>:</p> -->
   </div>
 
   <!-- The Team -->
-  <div class="w3-row-padding w3-grayscale">
+  <!-- <div class="w3-row-padding w3-grayscale">
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
         <img src="/w3images/team2.jpg" alt="John" style="width:100%">
@@ -141,7 +164,7 @@ body {font-size:16px;}
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- placeholder -->
   <!-- <div class="w3-container" id="placeholder" style="margin-top:75px">
