Testing HAM video

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body {font-size:16px;}
     </div>
 
     <div class="w3-half">
-      <img src="/pictures/" style="width:100%" onclick="onClick(this)" alt="Hydraulic artificial muscle">
+      <img src="/pictures/HAM.mp4" style="width:100%" onclick="onClick(this)" alt="Hydraulic artificial muscle">
       <img src="/pictures/134arm.jpg" style="width:100%" onclick="onClick(this)" alt="Robotic arm, writing configuration">
       <img src="/pictures/134clock.jpg" style="width:100%" onclick="onClick(this)" alt="Artistic clock">
     </div>
