--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ body {font-size:16px;}
   <!-- work -->
   <div class="w3-container" style="margin-top:80px" id="work">
     <h1 class="w3-xxxlarge w3-text-red"><b>work.</b></h1>
+    <p><a href="Soham Gaggenapally Resume.pdf">My resume</a></p>
     <hr style="width:50px;border:5px solid red" class="w3-round">
   </div>
   
