--- a/index.html
+++ b/index.html
@@ -125,47 +125,52 @@ body {font-size:16px;}
   <div class="w3-container" id="interests" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>my interests.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>My interests are [not yet done].</p>
-    <!-- <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-    incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
-    <p><b>Our interests are thoughtfully chosen</b>:</p> -->
+    <p>I love to create music, dance, play games (sports and video games), and take pictures.</p>
   </div>
 
-  <!-- The Team -->
-  <!-- <div class="w3-row-padding w3-grayscale">
+  <!-- intersts board -->
+  <div class="w3-row-padding w3-grayscale">
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+        <img src="/w3images/team2.jpg" alt="Dance" style="width:100%">
         <div class="w3-container">
-          <h3>John Doe</h3>
-          <p class="w3-opacity">CEO & Founder</p>
+          <h3>Dancing</h3>
+          <p class="w3-opacity">description</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
       </div>
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+        <img src="/w3images/team1.jpg" alt="Music" style="width:100%">
         <div class="w3-container">
-          <h3>Jane Doe</h3>
-          <p class="w3-opacity">Designer</p>
+          <h3>Making music</h3>
+          <p class="w3-opacity">description</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
       </div>
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
+        <img src="/w3images/team3.jpg" alt="Photography" style="width:100%">
         <div class="w3-container">
-          <h3>Mike Ross</h3>
-          <p class="w3-opacity">Architect</p>
+          <h3>Taking pictures</h3>
+          <p class="w3-opacity">description</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
       </div>
     </div>
-  </div> -->
+    <div class="w3-col m4 w3-margin-bottom">
+      <div class="w3-light-grey">
+        <img src="/w3images/team2.jpg" alt="Dance2" style="width:100%">
+        <div class="w3-container">
+          <h3>Dancing2</h3>
+          <p class="w3-opacity">description</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- placeholder -->
   <!-- <div class="w3-container" id="placeholder" style="margin-top:75px">
