--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ body {font-size:16px;}
 </style>
 
 <head>
+<meta name="google-site-verification" content="EbcXgRansqnRHx5kFrtWV0FM3fxdRVFfRnteU_gtuoM" />
 <link rel="icon" href="/pictures/favicon.png">
 </head>
  
@@ -135,8 +136,8 @@ body {font-size:16px;}
         <img src="/w3images/team2.jpg" alt="Dance" style="width:100%">
         <div class="w3-container">
           <h3>Dancing</h3>
-          <p class="w3-opacity">description</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p class="w3-opacity">5 6 7 8</p>
+          <p>I was on a competitive dance team in college and love dancing many different styles from hip hop to bhangra.</p>
         </div>
       </div>
     </div>
@@ -145,8 +146,8 @@ body {font-size:16px;}
         <img src="/w3images/team1.jpg" alt="Music" style="width:100%">
         <div class="w3-container">
           <h3>Making music</h3>
-          <p class="w3-opacity">description</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p class="w3-opacity">Mixes and original pieces</p>
+          <p>I use FL Studio, Ableton, and Reason to make mixes as well as original productions. Here's a link to <a href="https://www.soundcloud.com/soso-mixes">my Soundcloud!</a></p>
         </div>
       </div>
     </div>
@@ -155,18 +156,38 @@ body {font-size:16px;}
         <img src="/w3images/team3.jpg" alt="Photography" style="width:100%">
         <div class="w3-container">
           <h3>Taking pictures</h3>
-          <p class="w3-opacity">description</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p class="w3-opacity">📸</p>
+          <p>I mostly take pictures of everything that's not human.</p>
         </div>
       </div>
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team2.jpg" alt="Dance2" style="width:100%">
+        <img src="/w3images/team2.jpg" alt="Making" style="width:100%">
         <div class="w3-container">
-          <h3>Dancing2</h3>
-          <p class="w3-opacity">description</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <h3>Building things</h3>
+          <p class="w3-opacity">Lots of things</p>
+          <p>Speaker stands out of wood, 3D printed laptop stands, replacement bed risers - if I want something, I might just make it.</p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col m4 w3-margin-bottom">
+      <div class="w3-light-grey">
+        <img src="/w3images/team2.jpg" alt="Sports" style="width:100%">
+        <div class="w3-container">
+          <h3>Playing sports</h3>
+          <p class="w3-opacity">Team or individual</p>
+          <p>I like to play basketball, tennis, frisbee, and almost anything else.</p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col m4 w3-margin-bottom">
+      <div class="w3-light-grey">
+        <img src="/w3images/team2.jpg" alt="Games" style="width:100%">
+        <div class="w3-container">
+          <h3>Playing games</h3>
+          <p class="w3-opacity">Green light</p>
+          <p>I'm a huge car fan, so naturally I dabble in NFS, Forza and PCARS.</p>
         </div>
       </div>
     </div>
