--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {font-size:16px;}
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-<!-- !PAGE CONTENT! -->
+<!-- !PAGE CONTENT! Made with the help of W3 -->
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
@@ -157,7 +157,7 @@ body {font-size:16px;}
         <div class="w3-container">
           <h3>Taking pictures</h3>
           <p class="w3-opacity">📸</p>
-          <p>I mostly take pictures of everything that's not human.</p>
+          <p>I dabble in many styles of photography, but I tend to mostly take pictures of things that aren't human.</p>
         </div>
       </div>
     </div>
@@ -251,9 +251,9 @@ body {font-size:16px;}
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:35px;padding-right:58px">
+<!-- <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:35px;padding-right:58px">
 	<p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p>
-</div>
+</div> -->
 
 <script>
 // Script to open and close sidebar
