Typos and testing pictures

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {font-size:16px;}
       <div class="vertical-center">
         <p>Hi! </br> My name is Soham. </br> I'm a mechanical engineer
            (<a href="https://account.ncees.org/rn/1992756-1175542-c7dd7f2">EIT</a>,
-            <a href="https://account.ncees.org/rn/1992756-1241020-d8ed6a4">PE</a>) getting my Master's in
+            <a href="https://account.ncees.org/rn/1992756-1241020-d8ed6a4">PE passed</a>) getting my Master's in
             Human-Robot Interaction at Tufts University. I work on robotics, mechanical design, simulations, and
             love to create things in the digital, physical, and art worlds.</p>
       </div>
@@ -133,11 +133,11 @@ body {font-size:16px;}
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team2.jpg" alt="Dance" style="width:100%">
+        <img src="/pictures/134final.jpg" alt="Dance" style="width:100%">
         <div class="w3-container">
           <h3>Dancing</h3>
           <p class="w3-opacity">5 6 7 8</p>
-          <p>I was on a competitive dance team in college and love dancing many different styles from hip hop to bhangra.</p>
+          <p>I danced competitively for <a href="https://www.instagram.com/nyudillagi/">NYU Dillagi</a> and continue casually dancing many different styles from hip hop to bhangra.</p>
         </div>
       </div>
     </div>
@@ -153,7 +153,7 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team3.jpg" alt="Photography" style="width:100%">
+        <img src="/pictures/134hri.jpg" alt="Photography" style="width:100%">
         <div class="w3-container">
           <h3>Taking pictures</h3>
           <p class="w3-opacity">📸</p>
