--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@ body {font-size:16px;}
   </div>
 
   <!-- intersts board -->
-  <div class="w3-row-padding w3-grayscale">
+  <div class="w3-row-padding w3-color">
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/pictures/134final.jpg" alt="Dance" style="width:100%">
+        <img src="/pictures/i_dance.png" alt="Dance" style="width:100%">
         <div class="w3-container">
           <h3>Dancing</h3>
           <p class="w3-opacity">5 6 7 8</p>
@@ -143,7 +143,7 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team1.jpg" alt="Music" style="width:100%">
+        <img src="/pictures/i_music.jpg" alt="Music" style="width:100%">
         <div class="w3-container">
           <h3>Making music</h3>
           <p class="w3-opacity">Mixes and original pieces</p>
@@ -153,7 +153,7 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/pictures/134hri.jpg" alt="Photography" style="width:100%">
+        <img src="/pictures/i_photography.jpg" alt="Photography" style="width:100%">
         <div class="w3-container">
           <h3>Taking pictures</h3>
           <p class="w3-opacity">📸</p>
@@ -163,27 +163,27 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team2.jpg" alt="Making" style="width:100%">
+        <img src="/pictures/i_making.jpg" alt="Making" style="width:100%">
         <div class="w3-container">
           <h3>Building things</h3>
           <p class="w3-opacity">Lots of things</p>
-          <p>Speaker stands out of wood, 3D printed laptop stands, replacement bed risers - if I want something, I might just make it.</p>
+          <p>Speaker stands, model SR-71, replacement bed risers, guitar stand - if I want something, I might just make it.</p>
         </div>
       </div>
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team2.jpg" alt="Sports" style="width:100%">
+        <img src="/pictures/i_sports.jpg" alt="Sports" style="width:100%">
         <div class="w3-container">
           <h3>Playing sports</h3>
           <p class="w3-opacity">Team or individual</p>
-          <p>I like to play basketball, tennis, frisbee, and almost anything else.</p>
+          <p>I like to play basketball, tennis, frisbee, and most other sports (though I might not be good at them).</p>
         </div>
       </div>
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team2.jpg" alt="Games" style="width:100%">
+        <img src="/pictures/i_games.jpg" alt="Games" style="width:100%">
         <div class="w3-container">
           <h3>Playing games</h3>
           <p class="w3-opacity">Green light</p>
