Styling of interests

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ body {font-size:16px;}
         <img src="/pictures/i_dance.png" alt="Dance" style="width:100%">
         <div class="w3-container">
           <h3>Dancing</h3>
-          <p class="w3-opacity">5 6 7 8</p>
+          <!-- <p class="w3-opacity">5 6 7 8</p> -->
           <p>I danced competitively for <a href="https://www.instagram.com/nyudillagi/">NYU Dillagi</a> and continue casually dancing many different styles from hip hop to bhangra.</p>
         </div>
       </div>
@@ -146,7 +146,7 @@ body {font-size:16px;}
         <img src="/pictures/i_music.jpg" alt="Music" style="width:100%">
         <div class="w3-container">
           <h3>Making music</h3>
-          <p class="w3-opacity">Mixes and original pieces</p>
+          <!-- <p class="w3-opacity">Mixes and original pieces</p> -->
           <p>I use FL Studio, Ableton, and Reason to make mixes as well as original productions. Here's a link to <a href="https://www.soundcloud.com/soso-mixes">my Soundcloud!</a></p>
         </div>
       </div>
@@ -156,7 +156,7 @@ body {font-size:16px;}
         <img src="/pictures/i_photography.jpg" alt="Photography" style="width:100%">
         <div class="w3-container">
           <h3>Taking pictures</h3>
-          <p class="w3-opacity">📸</p>
+          <!-- <p class="w3-opacity">📸</p> -->
           <p>I dabble in many styles of photography, but I tend to mostly take pictures of things that aren't human.</p>
         </div>
       </div>
@@ -166,7 +166,7 @@ body {font-size:16px;}
         <img src="/pictures/i_making.jpg" alt="Making" style="width:100%">
         <div class="w3-container">
           <h3>Building things</h3>
-          <p class="w3-opacity">Lots of things</p>
+          <!-- <p class="w3-opacity">Lots of things</p> -->
           <p>Speaker stands, model SR-71, replacement bed risers, guitar stand - if I want something, I might just make it.</p>
         </div>
       </div>
@@ -176,7 +176,7 @@ body {font-size:16px;}
         <img src="/pictures/i_sports.jpg" alt="Sports" style="width:100%">
         <div class="w3-container">
           <h3>Playing sports</h3>
-          <p class="w3-opacity">Team or individual</p>
+          <!-- <p class="w3-opacity">Team or individual</p> -->
           <p>I like to play basketball, tennis, frisbee, and most other sports (though I might not be good at them).</p>
         </div>
       </div>
@@ -186,8 +186,8 @@ body {font-size:16px;}
         <img src="/pictures/i_games.jpg" alt="Games" style="width:100%">
         <div class="w3-container">
           <h3>Playing games</h3>
-          <p class="w3-opacity">Green light</p>
-          <p>I'm a huge car fan, so naturally I dabble in NFS, Forza and PCARS.</p>
+          <!-- <p class="w3-opacity">Red light green light</p> -->
+          <p>I'm a huge car fan, so naturally I dabble in NFS, Forza and pCARS. I occasionally play indie games.</p>
         </div>
       </div>
     </div>
