Styling and editing text

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ body {font-size:16px;}
   <!-- work -->
   <div class="w3-container" style="margin-top:80px" id="work">
     <h1 class="w3-xxxlarge w3-text-red"><b>work.</b></h1>
-    <p><a href="Soham Gaggenapally Resume.pdf">My resume</a></p>
     <hr style="width:50px;border:5px solid red" class="w3-round">
+    <p>Quick link to <a href="Soham Gaggenapally Resume.pdf">my resume</a>.</p>
   </div>
   
   <!-- Photo grid for work (modal) -->
@@ -126,7 +126,7 @@ body {font-size:16px;}
   <div class="w3-container" id="interests" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>my interests.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>I love to create music, dance, play games (sports and video games), and take pictures.</p>
+    <p>These are just some of my interests and hobbies:</p>
   </div>
 
   <!-- intersts board -->
@@ -246,7 +246,9 @@ body {font-size:16px;}
     <a href="https://github.com/sgaggen">github.com/sgaggen</a>  |  
     <a href="https://instagram.com/justasmalllife">@justasmalllife</a>
   </div>
-
+</br>
+</br>
+</br>
 <!-- End page content -->
 </div>
 
