--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/pictures/i_making.jpg" alt="Making" style="width:100%">
+        <img src="/pictures/i_making.png" alt="Making" style="width:100%">
         <div class="w3-container">
           <h3>Building things</h3>
           <!-- <p class="w3-opacity">Lots of things</p> -->
