--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {font-size:16px;}
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">home</a> 
     <a href="#me" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">me</a> 
     <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my work</a> 
-    <a href="#interests" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my interests</a> 
+    <a href="#hobbies" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my hobbies</a> 
     <!-- <a href="#placeholder" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Placeholder 4</a>  -->
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my contact</a>
   </div>
@@ -92,7 +92,7 @@ body {font-size:16px;}
   <div class="w3-container" style="margin-top:80px" id="work">
     <h1 class="w3-xxxlarge w3-text-red"><b>work.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Quick link to <a href="Soham Gaggenapally Resume.pdf">my resume</a>.</p>
+    <p>A short selection of things that I've worked on. <a href="Soham Gaggenapally Resume.pdf">Click here for my resume.</a></p>
   </div>
   
   <!-- Photo grid for work (modal) -->
@@ -122,20 +122,20 @@ body {font-size:16px;}
     </p>
   </div> -->
   
-  <!-- interests -->
-  <div class="w3-container" id="interests" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>my interests.</b></h1>
+  <!-- hobbies -->
+  <div class="w3-container" id="hobbies" style="margin-top:75px">
+    <h1 class="w3-xxxlarge w3-text-red"><b>my hobbies.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>These are just some of my interests and hobbies:</p>
   </div>
 
-  <!-- intersts board -->
+  <!-- hobbies board -->
   <div class="w3-row-padding w3-color">
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/pictures/i_dance.png" alt="Dance" style="width:100%">
+        <img src="/pictures/i_dance.png" alt="dance" style="width:100%">
         <div class="w3-container">
-          <h3>Dancing</h3>
+          <h3>dancing</h3>
           <!-- <p class="w3-opacity">5 6 7 8</p> -->
           <p>I danced competitively for <a href="https://www.instagram.com/nyudillagi/">NYU Dillagi</a> and continue casually dancing many different styles from hip hop to bhangra.</p>
         </div>
@@ -143,9 +143,9 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/pictures/i_music.jpg" alt="Music" style="width:100%">
+        <img src="/pictures/i_music.jpg" alt="music" style="width:100%">
         <div class="w3-container">
-          <h3>Making music</h3>
+          <h3>making music</h3>
           <!-- <p class="w3-opacity">Mixes and original pieces</p> -->
           <p>I use FL Studio, Ableton, and Reason to make mixes as well as original productions. Here's a link to <a href="https://www.soundcloud.com/soso-mixes">my Soundcloud!</a></p>
         </div>
@@ -153,9 +153,9 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/pictures/i_photography.jpg" alt="Photography" style="width:100%">
+        <img src="/pictures/i_photography.jpg" alt="photography" style="width:100%">
         <div class="w3-container">
-          <h3>Taking pictures</h3>
+          <h3>taking pictures</h3>
           <!-- <p class="w3-opacity">📸</p> -->
           <p>I dabble in many styles of photography, but I tend to mostly take pictures of things that aren't human.</p>
         </div>
@@ -163,9 +163,9 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/pictures/i_making.png" alt="Making" style="width:100%">
+        <img src="/pictures/i_making.png" alt="making" style="width:100%">
         <div class="w3-container">
-          <h3>Building things</h3>
+          <h3>making things</h3>
           <!-- <p class="w3-opacity">Lots of things</p> -->
           <p>Speaker stands, model SR-71, replacement bed risers, guitar stand - if I want something, I might just make it.</p>
         </div>
@@ -173,9 +173,9 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/pictures/i_sports.jpg" alt="Sports" style="width:100%">
+        <img src="/pictures/i_sports.jpg" alt="sports" style="width:100%">
         <div class="w3-container">
-          <h3>Playing sports</h3>
+          <h3>playing sports</h3>
           <!-- <p class="w3-opacity">Team or individual</p> -->
           <p>I like to play basketball, tennis, frisbee, and most other sports (though I might not be good at them).</p>
         </div>
@@ -183,11 +183,11 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/pictures/i_games.jpg" alt="Games" style="width:100%">
+        <img src="/pictures/i_games.jpg" alt="games" style="width:100%">
         <div class="w3-container">
-          <h3>Playing games</h3>
+          <h3>playing games</h3>
           <!-- <p class="w3-opacity">Red light green light</p> -->
-          <p>I'm a huge car fan, so naturally I dabble in NFS, Forza and pCARS. I occasionally play indie games.</p>
+          <p>I'm a huge car fan, so naturally I dabble in NFS, Forza and pCARS. I occasionally play indie and AAA games.</p>
         </div>
       </div>
     </div>
