Updated resume, added HRI study gif

--- a/index.html
+++ b/index.html
@@ -99,14 +99,15 @@ body {font-size:16px;}
   <div class="w3-row-padding">
     <div class="w3-half">
       <img src="/pictures/134final.jpg" style="width:100%" onclick="onClick(this)" alt="Brachiating robot">
-      <img src="/pictures/134hri.jpg" style="width:100%" onclick="onClick(this)" alt="Catch and throw robot">
-      <img src="/pictures/134balancing.jpg" style="width:100%" onclick="onClick(this)" alt="Self balancing robot">
+      <img src="/pictures/133hri.gif" style="width:100%" onclick="onClick(this)" alt="HRI study on interruptibility">
+      <img src="/pictures/134arm.jpg" style="width:100%" onclick="onClick(this)" alt="Robotic arm, writing configuration">
+      <img src="/pictures/134clock.jpg" style="width:100%" onclick="onClick(this)" alt="Artistic clock">
     </div>
 
     <div class="w3-half">
       <img src="/pictures/HAM.gif" style="width:100%" onclick="onClick(this)" alt="Hydraulic artificial muscle">
-      <img src="/pictures/134arm.jpg" style="width:100%" onclick="onClick(this)" alt="Robotic arm, writing configuration">
-      <img src="/pictures/134clock.jpg" style="width:100%" onclick="onClick(this)" alt="Artistic clock">
+      <img src="/pictures/134balancing.jpg" style="width:100%" onclick="onClick(this)" alt="Self balancing robot">
+      <img src="/pictures/134hri.jpg" style="width:100%" onclick="onClick(this)" alt="Catch and throw robot">
     </div>
   </div>
 
