--- a/index.html
+++ b/index.html
@@ -244,8 +244,9 @@ body {font-size:16px;}
     <h1 class="w3-xxxlarge w3-text-red"><b>my contact.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
 		<a href="mailto:gaggenapally.soham@gmail.com">email</a>  |  
-    <a href="https://github.com/sgaggen">github.com/sgaggen</a>  |  
-    <a href="https://instagram.com/justasmalllife">@justasmalllife</a>
+    <a href="https://github.com/sgaggen">github</a>  |  
+    <a href="https://www.linkedin.com/in/soham-gaggenapally">linkedin</a>  |  
+    <a href="https://instagram.com/justasmalllife">instagram</a>
   </div>
 </br>
 </br>
