--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {font-size:16px;}
   <!-- Photo grid for introduction (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <img src="/pictures/self.jpg" style="width:100%" onclick="onClick(this)" alt="NYC">
+      <img src="/pictures/self.jpg" style="width:100%" onclick="onClick(this)" alt="Me in NYC">
       <!-- <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
       <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs"> -->
     </div>
