--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {font-size:16px;}
 
   <!-- work -->
   <div class="w3-container" style="margin-top:80px" id="work">
-    <h1 class="w3-xxxlarge w3-text-red"><b>work.</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>my work.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>A short selection of things that I've worked on. <a href="Soham Gaggenapally Resume.pdf">Click here for my resume.</a></p>
   </div>
