Resume and media update
Resume, profile picture, MR gif

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {font-size:16px;}
   <!-- Photo grid for introduction (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <img src="/pictures/self.jpg" style="width:100%" onclick="onClick(this)" alt="Me in NYC">
+      <img src="/pictures/self.jpg" style="width:100%" onclick="onClick(this)" alt="Me, Soham">
       <!-- <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
       <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs"> -->
     </div>
@@ -98,6 +98,7 @@ body {font-size:16px;}
   <!-- Photo grid for work (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
+      <img src="/pictures/mindrender.gif" style="width:100%" onclick="onClick(this)" alt="LEGO + Mind Render">
       <img src="/pictures/134final.jpg" style="width:100%" onclick="onClick(this)" alt="Brachiating robot">
       <img src="/pictures/133hri.gif" style="width:100%" onclick="onClick(this)" alt="HRI study on interruptibility">
       <img src="/pictures/134arm.jpg" style="width:100%" onclick="onClick(this)" alt="Robotic arm, writing configuration">
