--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ body {font-size:16px;}
       <div class="vertical-center">
         <p>Hi! </br> My name is Soham. </br> I'm a mechanical engineer
            (<a href="https://account.ncees.org/rn/1992756-1175542-c7dd7f2">EIT</a>,
-            <a href="https://account.ncees.org/rn/1992756-1241020-d8ed6a4">PE passed</a>) getting my Master's in
-            Human-Robot Interaction at Tufts University. I work on robotics, mechanical design, simulations, and
-            love to create things in the digital, physical, and art worlds.</p>
+            <a href="https://account.ncees.org/rn/1992756-1241020-d8ed6a4">PE passed</a>) who recently got his Master's in
+            Human-Robot Interaction at Tufts University. I work on robotics, mechanical design, simulations, and love to 
+            create things in the digital, physical, and art worlds.</p>
       </div>
       <!-- <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
       <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design"> -->
