Added resume section
And updated resume

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@ body {font-size:16px;}
   </div>
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">home</a> 
-    <a href="#me" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">me</a> 
-    <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my work</a> 
-    <a href="#hobbies" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my hobbies</a> 
+    <a href="#me" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">me</a>
+    <a href="#resume" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my resume</a>
+    <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my work</a>
+    <a href="#hobbies" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my hobbies</a>
     <!-- <a href="#placeholder" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Placeholder 4</a>  -->
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">my contact</a>
   </div>
@@ -87,12 +88,20 @@ body {font-size:16px;}
     </div>
   </div>
 
+  
+  <!-- resume -->
+  <div class="w3-container" style="margin-top:80px" id="resume">
+    <h1 class="w3-xxxlarge w3-text-red"><b>my resume.</b></h1>
+    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <p><a href="Soham Gaggenapally Resume.pdf">Click here for my resume.</a></p>
+  </div>
+
 
   <!-- work -->
   <div class="w3-container" style="margin-top:80px" id="work">
     <h1 class="w3-xxxlarge w3-text-red"><b>my work.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>A short selection of things that I've worked on. <a href="Soham Gaggenapally Resume.pdf">Click here for my resume.</a></p>
+    <p>A short selection of things that I've worked on. See above for my resume.</p>
   </div>
   
   <!-- Photo grid for work (modal) -->
