--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ body {font-size:16px;}
     <h1 class="w3-xxxlarge w3-text-red"><b>my resume.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p><a href="Soham Gaggenapally Resume.pdf">Click here for my resume.</a></p>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/sgaggen/sgaggen.github.io/blob/master/Soham%20Gaggenapally%20Resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </div>
 
 
