--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@ body {font-size:16px;}
   <div class="w3-container" style="margin-top:80px" id="resume">
     <h1 class="w3-xxxlarge w3-text-red"><b>my resume.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p><a href="Soham Gaggenapally Resume.pdf">Click here for my resume.</a></p>
+    <p><a href="Soham Gaggenapally Resume.pdf">Click here to download my resume.</a></p>
     <iframe src="https://docs.google.com/gview?url=https://github.com/sgaggen/sgaggen.github.io/raw/master/Soham%20Gaggenapally%20Resume.pdf&embedded=true" style="width:80%; height:80%;" frameborder="0"></iframe>
+    <iframe src="C:\Users\scien\Documents\GitHub\sgaggen.github.io\Soham Gaggenapally Resume.pdf" width="500" height="700"></iframe>
   </div>
 
 
