--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ body {font-size:16px;}
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p><a href="Soham Gaggenapally Resume.pdf">Click here to download my resume.</a></p>
     <iframe src="https://docs.google.com/gview?url=https://github.com/sgaggen/sgaggen.github.io/raw/master/Soham%20Gaggenapally%20Resume.pdf&embedded=true" style="width:80%; height:80%;" frameborder="0"></iframe>
-    <iframe src="C:\Users\scien\Documents\GitHub\sgaggen.github.io\Soham Gaggenapally Resume.pdf" width="500" height="700"></iframe>
+    <iframe src="https://github.com/sgaggen/sgaggen.github.io/raw/master/Soham%20Gaggenapally%20Resume.pdf" width="500" height="700"></iframe>
   </div>
 
 
